Revise index.html for FiveM Roleplay Server
Updated the HTML structure and content for the FiveM Roleplay Server page, including changes to the hero section, features, server status, and footer.

--- a/index.html
+++ b/index.html
@@ -203,10 +203,10 @@
     <main>
         <section class="hero">
             <div class="hero-content">
-                <h1>Welcome to FiveM RP</h1>
+                <h1>Welcome to The Witcher RP</h1>
                 <p>Experience the most realistic roleplay server</p>
                 <div class="cta-buttons">
-                    <a href="fivem://connect/your-server-ip" class="cta-button primary">Play Now</a>
+                    <a href="fivem://connect/do7rdj" class="cta-button primary">Play Now</a>
                 </div>
             </div>
             <div class="stats-container">
@@ -337,18 +337,19 @@
                 <div class="footer-section">
                     <h3>Social Media</h3>
                     <div class="social-links">
-                        <a href="https://discord.gg/your-discord-invite" target="_blank"><i class="fab fa-discord"></i></a>
-                        <a href="https://twitter.com/your-twitter" target="_blank"><i class="fab fa-twitter"></i></a>
-                        <a href="https://instagram.com/your-instagram" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a href="https://discord.gg/8kzxzpN6Ny" target="_blank"><i class="fab fa-discord"></i></a>
+                        <a href="https://twitter.com/#" target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a href="https://instagram.com/#" target="_blank"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 FiveM Roleplay Server. All rights reserved. | <a href="imprint.html" style="color: var(--primary-color); text-decoration: none;">Imprint</a></p>
+                <p>&copy; 2023 S Roleplay Server The Witcher Rp. All rights reserved. | <a href="imprint.html" style="color: var(--primary-color); text-decoration: none;">Imprint</a></p>
             </div>
         </div>
     </footer>
 
     <script src="js/script.js"></script>
 </body>
+
 </html> 
