--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 <body>
     <nav class="navbar">
         <div class="logo">
-            <h1>FiveM RP</h1>
+            <h1>The Witcher RP</h1>
         </div>
         <ul class="nav-links">
             <li><a href="index.html" class="active">Home</a></li>
